--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ anyio==3.7.1
 atomicwrites==1.4.1
 attrs==24.2.0
 Authlib==1.3.2
+beautifulsoup4==4.13.3
 blinker==1.9.0
+bs4==0.0.2
 CacheControl==0.14.1
 cachetools==5.5.0
 certifi==2024.8.30
@@ -59,7 +61,7 @@ msgpack==1.1.0
 multidict==6.1.0
 narwhals==1.13.3
 numpy==2.1.3
-openai==1.54.3
+openai==1.65.5
 openpyxl==3.1.5
 packaging==24.2
 pandas==2.2.3
@@ -100,6 +102,7 @@ setuptools==75.3.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.6
 storage3==0.9.0
 streamlit==1.40.0
 supabase==2.10.0
